--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -96,6 +96,7 @@
 }
 
 .pokemon .name {
+    text-transform: capitalize;
     color: #fff;
     margin-bottom: 0;
 }
@@ -114,11 +115,13 @@
 }
 
 .pokemon .detail .types .type {
-    color #fff;
+    color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius:  1rem;
+    text-align: center;
+    filter: brightness(1.1);
 }
 
 .pokemon .detail img {
@@ -126,6 +129,27 @@
     height: 70px;
     align-self: flex-end;
 }
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    color: #fff;
+    font-size: .625rem;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+}
+
+
 
 @media screen and (min-width: 380px) {
     .pokemons {
